--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin_main_medium"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -19,7 +19,7 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_main_zero"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -29,14 +29,14 @@
 
                 <TextView
                     android:id="@+id/textView_main_question_no"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/width_main_zero"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Question 99"
-                    android:textSize="24sp" />
+                    android:textSize="@dimen/textsize_main_label_medium" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/width_main_zero"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
@@ -46,22 +46,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Score: 99"
-                        android:textSize="18sp" />
+                        android:textSize="@dimen/textsize_main_label_small" />
 
                     <TextView
                         android:id="@+id/textView_main_questions_left"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Questions left: 99"
-                        android:textSize="18sp" />
+                        android:textSize="@dimen/textsize_main_label_small" />
                 </LinearLayout>
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/imageView_main_car"
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="@dimen/width_main_zero"
+                android:layout_height="@dimen/height_main_car_image_medium"
+                android:layout_marginTop="@dimen/margin_main_medium"
                 android:scaleType="centerInside"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -70,9 +70,9 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_main_zero"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/margin_main_medium"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -86,18 +86,18 @@
 
                     <ImageView
                         android:id="@+id/imageView_main_answer0_logo"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="match_parent"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="1"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/main_question_manufacturer_logo1" />
 
                     <Button
                         android:id="@+id/button_main_answer_0"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="5"
                         android:onClick="validateAnswer"
                         android:text="Answer 0" />
@@ -106,7 +106,7 @@
                 <View
                     android:id="@+id/divider0"
                     android:layout_width="match_parent"
-                    android:layout_height="8dp" />
+                    android:layout_height="@dimen/height_main_devider_medium" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -116,18 +116,18 @@
 
                     <ImageView
                         android:id="@+id/imageView_main_answer1_logo"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="match_parent"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="1"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/main_question_manufacturer_logo1" />
 
                     <Button
                         android:id="@+id/button_main_answer_1"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="5"
                         android:onClick="validateAnswer"
                         android:text="Answer 1" />
@@ -136,7 +136,7 @@
                 <View
                     android:id="@+id/divider1"
                     android:layout_width="match_parent"
-                    android:layout_height="8dp" />
+                    android:layout_height="@dimen/height_main_devider_medium" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,18 +146,18 @@
 
                     <ImageView
                         android:id="@+id/imageView_main_answer2_logo"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="match_parent"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="1"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/main_question_manufacturer_logo1" />
 
                     <Button
                         android:id="@+id/button_main_answer_2"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="5"
                         android:onClick="validateAnswer"
                         android:text="Answer 2" />
@@ -166,7 +166,7 @@
                 <View
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
-                    android:layout_height="8dp" />
+                    android:layout_height="@dimen/height_main_devider_medium" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -176,18 +176,18 @@
 
                     <ImageView
                         android:id="@+id/imageView_main_answer3_logo"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="match_parent"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="1"
                         android:scaleType="centerInside"
                         app:srcCompat="@drawable/main_question_manufacturer_logo1" />
 
                     <Button
                         android:id="@+id/button_main_answer_3"
-                        android:layout_width="0dp"
+                        android:layout_width="@dimen/width_main_zero"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
+                        android:layout_margin="@dimen/margin_main_medium"
                         android:layout_weight="5"
                         android:onClick="validateAnswer"
                         android:text="Answer 3" />
@@ -196,7 +196,7 @@
                 <View
                     android:id="@+id/divider3"
                     android:layout_width="match_parent"
-                    android:layout_height="8dp" />
+                    android:layout_height="@dimen/height_main_devider_medium" />
 
             </LinearLayout>
 
@@ -204,11 +204,11 @@
                 android:id="@+id/button_main_reset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="@dimen/margin_main_medium"
+                android:layout_marginTop="@dimen/margin_main_medium"
+                android:layout_marginEnd="@dimen/margin_main_medium"
                 android:onClick="reset"
-                android:text="Reset"
+                android:text="@string/main_reset_label"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
